Fix missing margin below goupile.fr screenshot divs

--- a/web/sites/goupile.fr/static/goupile.fr.css
+++ b/web/sites/goupile.fr/static/goupile.fr.css
@@ -233,4 +233,9 @@ main {
     main { padding: 1em; }
 
     .legend { bottom: -6%; }
+
+    .screenshot {
+        float: none !important;
+        margin: 1em auto !important;
+    }
 }
